--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -44,15 +44,15 @@ jobs:
       # artifacts          
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.targetName }}_${{ matrix.os }}_${{matrix.qt_ver}}.zip
-          path: Release/${{ env.targetName }}.run
+          name: ${{ matrix.os }}_${{matrix.qt_ver}}.zip
+          path: Release/${{ matrix.os }}_${{matrix.qt_ver}}.run
       # tag Release
       - name: uploadRelease
         if: startsWith(github.event.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: Release/${{ env.targetName }}.zip
-          asset_name: ${{ env.targetName }}_${{ matrix.os }}_${{ matrix.qt_ver }}.zip
+          file: Release/${{ matrix.os }}_${{matrix.qt_ver}}.zip
+          asset_name: ${{ matrix.os }}_${{matrix.qt_ver}}.zip
           tag: ${{ github.ref }}
           overwrite: true
