--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -71,6 +71,7 @@ jobs:
           archiveName: ${{ env.orgName }}-${{ env.VERSION }}
         shell: pwsh
         run: |
+          Import-Module scripts
           & scripts\windows-mingw-publish.ps1 ${env:archiveName} ${env:targetName}
            $name = ${env:archiveName}
            echo "::set-output name=packageName::$name"       
