--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -52,7 +52,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: Release/${{ matrix.os }}_${{matrix.qt_ver}}.zip
+          file: ${{ matrix.os }}_${{matrix.qt_ver}}.zip
           asset_name: ${{ matrix.os }}_${{matrix.qt_ver}}.zip
           tag: ${{ github.ref }}
           overwrite: true
