--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -23,7 +23,7 @@ jobs:
           Invoke-WebRequest -Uri "https://download.qt.io/official_releases/qtcreator/8.0/8.0.2/qt-creator-opensource-windows-x86_64-8.0.2.exe" -OutFile qt-creator.exe
       - name: Build project with Qt Creator
         run: |
-          "C:/Qt/Tools/QtCreator/bin/qtcreator.exe" --no-crashhandler -project rateCheck.pro -build release
+          "C:/Qt/Tools/QtCreator/bin/qtcreator.exe" -project rateCheck.pro -build release
       - name: Deploy executable with windeployqt
         run: |
           "C:/Qt/6.4/mingw82_64/bin/windeployqt.exe" --qmldir "path/to/qml" rateCheck.exe
