--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -21,9 +21,12 @@ jobs:
       - name: Install Qt Creator
         run: |
           Invoke-WebRequest -Uri "https://download.qt.io/official_releases/qtcreator/8.0/8.0.2/qt-creator-opensource-windows-x86_64-8.0.2.exe" -OutFile qt-creator.exe
-      - name: Build project with Qt Creator
+      - name: Generate makefile with qmake
         run: |
-          "C:/Qt/Tools/QtCreator/bin/qtcreator.exe" -project rateCheck.pro -build release
+          "C:/Qt/6.4/mingw82_64/bin/qmake.exe" rateCheck.pro
+      - name: Build project with make
+        run: |
+          make
       - name: Deploy executable with windeployqt
         run: |
           "C:/Qt/6.4/mingw82_64/bin/windeployqt.exe" --qmldir "path/to/qml" rateCheck.exe
