--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -23,7 +23,7 @@ jobs:
           Invoke-WebRequest -Uri "https://download.qt.io/official_releases/qtcreator/8.0/8.0.2/qt-creator-opensource-windows-x86_64-8.0.2.exe" -OutFile qt-creator.exe
       - name: Generate makefile with qmake
         run: |
-          "C:/Qt/6.4/mingw82_64/bin/qmake.exe" rateCheck.pro
+          "C:/Qt/6.4/mingw82_64/bin/qmake.exe" RateCheck.pro
       - name: Build project with make
         run: |
           make
