--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -1,4 +1,4 @@
-name: Windows-MinGW 
+name: Windows MinGW
 on: 
   push:
     paths:
@@ -10,36 +10,78 @@ on:
     paths:
       - '**'
       - '*.pro'
-      - 'support/**'
+      - 'src/**'
       - '.github/workflows/windows-mingw.yml' 
-
 jobs:
   build:
+    name: Build
     runs-on: windows-latest
+    strategy:
+      matrix:
+        include:          
+          - qt_arch: win64_mingw81
+            qt_ver: 6.4.0
+            qt_tools: "tools_mingw,8.1.0-1-202004170606,qt.tools.win64_mingw810"
+            qt_tools_mingw_install: mingw810_64
+    env:
+      targetName: RateCheck.exe
+      VERSION: Win64
+      orgName: IntegratedSoftwareTech
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Qt Creator
-        run: |
-          Invoke-WebRequest -Uri "https://download.qt.io/official_releases/qtcreator/8.0/8.0.2/qt-creator-opensource-windows-x86_64-8.0.2.exe" -OutFile qt-creator.exe
-      - name: Generate makefile with qmake
-        run: |
-          "C:/Qt/6.4/mingw82_64/bin/qmake.exe" RateCheck.pro
-      - name: Build project with make
-        run: |
-          make
-      - name: Deploy executable with windeployqt
-        run: |
-          "C:/Qt/6.4/mingw82_64/bin/windeployqt.exe" --qmldir "path/to/qml" rateCheck.exe
-      - name: Zip executable and deployment files
-        run: |
-          zip -r rateCheck_win.zip rateCheck.exe Qt* platforms
-          mv rateCheck_win.zip rateCheck_${GITHUB_REF#refs/tags/}.zip
-      - name: Deploy to GitHub Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2.14.0
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: rateCheck_Win_${GITHUB_REF#refs/tags/}.zip
-          asset_name: rateCheck_Win_${GITHUB_REF#refs/tags/}.zip
-          asset_content_type: application/zip
+          version: ${{ matrix.qt_ver }}
+          arch: ${{ matrix.qt_arch }}
+          tools: ${{ matrix.qt_tools }}
+          cached: 'false'
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: Qt 5 environment configuration
+        if: ${{ startsWith( matrix.qt_ver, 5 ) }}
+        shell: pwsh
+        run: |
+          Write-Output "${{ env.Qt5_DIR }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          Write-Output "${{ env.Qt5_DIR }}/../../Tools/${{ matrix.qt_tools_mingw_install }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - name: Qt 6 environment configuration
+        if: ${{ startsWith( matrix.qt_ver, 6 ) }}
+        shell: pwsh
+        run: |
+          Write-Output "${{ env.Qt6_DIR }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          Write-Output "${{ env.Qt6_DIR }}/../../Tools/${{ matrix.qt_tools_mingw_install }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - name: where is qmake & where is mingw32-make
+        shell: pwsh
+        run: |
+          Get-Command -Name 'qmake' | Format-List
+          Get-Command -Name 'mingw32-make' | Format-List
+      - name: mingw-build
+        id: build
+        shell: cmd
+        run: |
+          qmake
+          mingw32-make
+      - name: package
+        id: package      
+        env:
+          #archiveName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          archiveName: ${{ env.orgName }}-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
+          
+        shell: pwsh
+        run: |
+          & scripts\windows-mingw-publish.ps1 ${env:archiveName} ${env:targetName}
+           $name = ${env:archiveName}
+           echo "::set-output name=packageName::$name"         
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.package.outputs.packageName }}
+          path: ${{ steps.package.outputs.packageName }}
+      - name: uploadRelease
+        if: startsWith(github.event.ref, 'refs/tags/')
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ steps.package.outputs.packageName }}.zip
+          asset_name: ${{ steps.package.outputs.packageName }}.zip
+          tag: ${{ github.ref }}
+          overwrite: true 
