--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -15,23 +15,26 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       matrix:
-        include:          
-          - qt_arch: win64_mingw81
-            qt_ver: 6.4.0
-            qt_tools: "tools_mingw,8.1.0-1-202004170606,qt.tools.win64_mingw810"
-            qt_tools_mingw_install: mingw810_64
+        include:
+#           - qt_arch: win64_mingw81
+#             qt_ver: 6.0.0
+#             qt_tools: "tools_mingw,8.1.0-1-202004170606,qt.tools.win64_mingw810"
+#             qt_tools_mingw_install: mingw810_64
+          - qt_arch: win64_mingw
+            qt_ver: 6.2.2
+            qt_tools: "tools_mingw,9.0.0-1-202111221309,qt.tools.win64_mingw900"
+            qt_tools_mingw_install: mingw900_64
     env:
       targetName: RateCheck.exe
-      VERSION: Win64
-      orgName: IntegratedSoftwareTech
     steps:
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2.14.0
+        uses: jurplel/install-qt-action@v2
         with:
           version: ${{ matrix.qt_ver }}
+          aqtversion: '==2.0.5'
           arch: ${{ matrix.qt_arch }}
           tools: ${{ matrix.qt_tools }}
           cached: 'false'
@@ -64,14 +67,12 @@ jobs:
       - name: package
         id: package      
         env:
-          #archiveName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-          archiveName: ${{ env.orgName }}-${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-          
+          archiveName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
         shell: pwsh
         run: |
           & scripts\windows-mingw-publish.ps1 ${env:archiveName} ${env:targetName}
            $name = ${env:archiveName}
-           echo "::set-output name=packageName::$name"         
+           echo "::set-output name=packageName::$name"       
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.package.outputs.packageName }}
