--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -53,6 +53,10 @@ jobs:
         run: |
           Write-Output "${{ env.Qt6_DIR }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           Write-Output "${{ env.Qt6_DIR }}/../../Tools/${{ matrix.qt_tools_mingw_install }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - name: Set C++17 flag
+        shell: pwsh
+        run: |
+        $env:CXXFLAGS = "-std=c++17"
       - name: where is qmake & where is mingw32-make
         shell: pwsh
         run: |
