--- a/.github/workflows/windows-mingw.yml
+++ b/.github/workflows/windows-mingw.yml
@@ -12,81 +12,42 @@ on:
       - '*.pro'
       - 'src/**'
       - '.github/workflows/windows-mingw.yml' 
+
 jobs:
   build:
-    name: Build
-    runs-on: windows-2019
-    strategy:
-      matrix:
-        include:
-#           - qt_arch: win64_mingw81
-#             qt_ver: 6.0.0
-#             qt_tools: "tools_mingw,8.1.0-1-202004170606,qt.tools.win64_mingw810"
-#             qt_tools_mingw_install: mingw810_64
-          - qt_arch: win64_mingw
-            qt_ver: 6.2.2
-            qt_tools: "tools_mingw,9.0.0-1-202111221309,qt.tools.win64_mingw900"
-            qt_tools_mingw_install: mingw900_64
-    env:
-      targetName: RateCheck.exe
+    runs-on: windows-latest
+
     steps:
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: ${{ matrix.qt_ver }}
-          aqtversion: '==2.0.5'
-          arch: ${{ matrix.qt_arch }}
-          tools: ${{ matrix.qt_tools }}
-          cached: 'false'
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-      - name: Qt 5 environment configuration
-        if: ${{ startsWith( matrix.qt_ver, 5 ) }}
-        shell: pwsh
+
+      # Install Qt Creator and MinGW
+      - name: Install Qt Creator and MinGW
         run: |
-          Write-Output "${{ env.Qt5_DIR }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          Write-Output "${{ env.Qt5_DIR }}/../../Tools/${{ matrix.qt_tools_mingw_install }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - name: Qt 6 environment configuration
-        if: ${{ startsWith( matrix.qt_ver, 6 ) }}
-        shell: pwsh
+          choco install qt-creator --version 6.3.2 -y
+          choco install mingw -y
+
+      # Add Qt and MinGW to the PATH
+      - name: Set up Qt and MinGW
         run: |
-          Write-Output "${{ env.Qt6_DIR }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          Write-Output "${{ env.Qt6_DIR }}/../../Tools/${{ matrix.qt_tools_mingw_install }}/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - name: Set C++17 flag
-        shell: pwsh
+          echo "::set-env name=PATH::${{ env.PATH }};C:/Qt/6.3.2/mingw81_64/bin;C:/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/bin"
+
+      # Build the project using qmake and MinGW
+      - name: Build the project
         run: |
-          $env:CXXFLAGS = "-std=c++17"
-      - name: where is qmake & where is mingw32-make
-        shell: pwsh
-        run: |
-          Get-Command -Name 'qmake' | Format-List
-          Get-Command -Name 'mingw32-make' | Format-List
-      - name: mingw-build
-        id: build
-        shell: cmd
-        run: |
-          qmake
+          cd RateCheck
+          qmake RateCheck.pro
           mingw32-make
-      - name: package
-        id: package      
-        env:
-          archiveName: ${{ matrix.qt_ver }}-${{ matrix.qt_target }}-${{ matrix.qt_arch }}
-        shell: pwsh
+
+      # Deploy the application executable using qwindeploy
+      - name: Deploy the application executable
         run: |
-          & scripts\windows-mingw-publish.ps1 ${env:archiveName} ${env:targetName}
-           $name = ${env:archiveName}
-           echo "::set-output name=packageName::$name"       
-      - uses: actions/upload-artifact@v2
+          cd RateCheck/release
+          qwindeploy -qmake=C:/Qt/6.3.2/mingw81_64/bin/qmake.exe -release -exe=rateCheck.exe -no-translations
+
+      # Upload the release archive to the tagged release folder in the repository
+      - name: Upload the release archive
+        uses: actions/upload-release-asset@v1
         with:
-          name: ${{ steps.package.outputs.packageName }}
-          path: ${{ steps.package.outputs.packageName }}
-      - name: uploadRelease
-        if: startsWith(github.event.ref, 'refs/tags/')
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.package.outputs.packageName }}.zip
-          asset_name: ${{ steps.package.outputs.packageName }}.zip
-          tag: ${{ github.ref }}
-          overwrite: true 
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: archive
+          file: rateCheck-release.tar.gz
